--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
 
             </div>
         </div>
+        <div class="Download-cv">
+            <button class="btn-primary">Download-cv</button>
+        </div>
     </section>
     </main>
     <footer>
