--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+  
     <link rel="stylesheet" href="styles/portfolio.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -178,7 +178,23 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
     </section>
     </main>
     <footer>
-
+        <!-- .footer-colum*2  -->
+        <div class="footer-colum">
+            <!-- h3.sectio-titile -->
+            <h3 class="sectio-title">Lets Connect</h3>
+            <!-- p.section-description -->
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <!-- div.social-links -->
+            <div class="social-links">
+                <!-- a*3>img -->
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-colum">
+            <h3 class="section-title">Let’s Message me</h3>
+        </div>
     </footer>
 </body>
 </html>
