--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
         </div>
         <div class="footer-colum">
             <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" placeholder="Your Email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
         </div>
     </footer>
 </body>
